fixed text align in resume

--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,7 @@ canvas {
   justify-content: center;
   background-color: black;
   z-index: 1;
+  text-align: center;
   overflow: hidden;
 }
 
